<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:id="@+id/constraint"
    tools:context=".NewsInDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:contentDescription="@string/display_poste"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/link_url"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <ImageView
            android:id="@+id/add"
            android:layout_width="@dimen/kwidth"
            android:layout_height="@dimen/kheight"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin_bottom_k1"
            android:layout_marginEnd="@dimen/margin_bottom_k1"
            android:layout_marginStart="@dimen/margin_bottom_k1"
            android:layout_marginTop="@dimen/margin_bottom_k1"
            android:contentDescription="@string/bookmark"
            android:gravity="center_vertical"
            android:src="@drawable/bookmark_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_k1"
            android:layout_marginEnd="@dimen/margin_bottom_k1"
            android:layout_marginStart="@dimen/margin_bottom_k1"
            android:layout_marginTop="@dimen/margin_bottom_k1"
            android:contentDescription="@string/add_to_widget"
            android:onClick="widgetbutton"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_widgets_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.837"
            tools:ignore="OnClick" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_k2"
            android:layout_marginStart="@dimen/margin_k2"
            android:layout_marginEnd="@dimen/margin_k2"
            android:layout_marginTop="@dimen/margin_toop_ad"
            android:background="@color/color_gray"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>