<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur1"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".NewsSourceActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white_widget"
        android:text="@string/hint"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="20dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_news"
                        android:weightSum="10">

                        <Spinner
                            android:id="@+id/country"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/height_spinner"
                            android:layout_margin="@dimen/spinner_margin"
                            android:layout_weight="5"
                            android:entries="@array/country" />

                        <Spinner
                            android:id="@+id/category"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spinner_margin"
                            android:layout_weight="5"
                            android:entries="@array/sub_cat" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/getNews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_button"
                        android:layout_marginTop="@dimen/margin_top_button"
                        android:fontFamily="serif"
                        android:text="@string/get_country_news"
                        android:textSize="@dimen/text_size_button" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="@dimen/margin_layout"
                android:layout_weight="5"
                android:elevation="4dp"
                app:cardCornerRadius="@dimen/corner_radius_elevation"
                tools:targetApi="lollipop">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/news_source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="50dp"
                            android:entries="@array/news_source" />

                        <Button
                            android:id="@+id/getnewsSource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="50dp"
                            android:fontFamily="serif"
                            android:text="@string/get_publisher_news"
                            android:textSize="@dimen/text_size_button_a2" />
                    </LinearLayout>
                </ScrollView>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
